--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <section id="home" class="home d-flex flex-column justify-content-center">
     <div class="container lang-us" data-aos="zoom-in" data-aos-delay="100">
       <h1 class="tag"><em>"Black Bean"</em></h1>
-      <p>blackbean-site:$ <span id="commandSelect" data-show-cursor="true" data-loop=false data-typed-items="\d global.profile -n 'BlackBean'"></span></p>
+      <p>blackbean-site:$ <span id="commandSelect" data-typed-items="\d global.profile -n 'BlackBean'"></span></p>
       <p>&nbsp;<i id="commandResult">I'm</i> <span id="commandResultTyping" data-typed-items="a software engineer,Vietnamese"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/blackbean?locale=vi_VN" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -62,7 +62,7 @@
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
         <div class="section-title lang-us">
-          <h2>About</h2>
+          <h2><span class="tag">About me</span></h2>
           <div class="caption">
             <h1>I'm Nguyen Ngoc Tuan Anh</h1>
           You also call me <b>"Black Bean"</b> as close friend.
@@ -106,7 +106,7 @@
     <section id="skills" class="skills section-bg">
       <div class="container lang-us" data-aos="fade-up">
         <div class="section-title">
-          <h2>Skills</h2>
+          <h2><span class="tag">My Skills</span></h2>
           <p>I have work with both side frontend and backend, however all most time with backend. with Nodejs, Java and other languages like PHP, Ruby, C# etc...</p>
         </div>
 
@@ -170,7 +170,7 @@
     <section id="resume" class="resume">
       <div class="container lang-us" data-aos="fade-up">
         <div class="section-title">
-          <h2>Resume</h2>
+          <h2><span class="tag">My Resume</span></h2>
           <p>The below is a short Summary about me. Please find more details about me as my <em><a target="_blank" href="assets/Anh_Nguyen.pdf">Resume Here</a></em>.</p>
         </div>
 
@@ -236,7 +236,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2 class="lang-us">Recommendations</h2>
+          <h2 class="lang-us"><span class="tag">Testimonial</span></h2>
         </div>
 
         <div class="recommendations-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -372,7 +372,7 @@
 
   <footer id="footer">
     <div class="container lang-us">
-      <h3>Anh Nguyen <em>"Black Bean"</em></h3>
+      <h3><em class="tag">Anh Nguyen</em></h3>
       <p>You also call me "Black Bean" OR "Đậu Đen"</p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/blackbean" class="linkedin"><i class="bx bxl-linkedin"></i></a>
