--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Black Bean's Blogs</title>
+    <title>Black Bean's Portfolio</title>
     <meta content="This is my personal page" name="description">
     <meta content="BlackBean, Dau Den" name="keywords">
     <link href="assets/img/favicon.ico" rel="icon">
