--- a/index.html
+++ b/index.html
@@ -16,21 +16,39 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/trend-style.css" rel="stylesheet">
+    <link href="assets/css/terminal.css" rel="stylesheet">
 </head>
 <body id="body" class="us">
+<div id="terminal" class="terminal-container">
+    <div id="terminalResult" class="terminal-result" style="display: none;"></div>
+    <div class="terminal-input-container">
+        <span class="terminal-prompt">blackbean-site:$</span>
+        <input id="terminalInput" class="terminal-input" type="text" placeholder="Type \d help for available commands">
+    </div>
+</div>
+<div id="ui" class="ui-container">
 <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
 <header id="header" class="d-flex flex-column justify-content-center">
+    <div class="options">
+        <ul>
+            <li>
+                <a href="javascript: void(0)" class="nav-link toggleUI"><i class="bx bx-color"></i>
+                    <span class="lang-vn">CLI Interface</span>
+                </a>
+            </li>
+        </ul>
+    </div>
     <nav id="navbar" class="navbar nav-menu">
         <ul>
-            <li><a href="#home" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-            <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-            <li><a href="#skills" class="nav-link scrollto"><i class="bi bi-list-columns-reverse"></i>
+            <li><a href="#home" class="nav-link scroll-to active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+            <li><a href="#about" class="nav-link scroll-to"><i class="bx bx-user"></i> <span>About</span></a></li>
+            <li><a href="#skills" class="nav-link scroll-to"><i class="bi bi-list-columns-reverse"></i>
                 <span>Skills</span></a></li>
-            <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a>
+            <li><a href="#resume" class="nav-link scroll-to"><i class="bx bx-file-blank"></i> <span>Resume</span></a>
             </li>
-            <li><a href="#recommendations" class="nav-link scrollto"><i class="bi bi-twitch"></i>
+            <li><a href="#recommendations" class="nav-link scroll-to"><i class="bi bi-twitch"></i>
                 <span>Recommendations</span></a></li>
-            <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a>
+            <li><a href="#contact" class="nav-link scroll-to"><i class="bx bx-envelope"></i> <span>Contact</span></a>
             </li>
         </ul>
     </nav>
@@ -38,9 +56,11 @@
 <section id="home" class="home d-flex flex-column justify-content-center">
     <div class="container lang-us" data-aos="zoom-in" data-aos-delay="100">
         <h1 class="tag"><em>"Black Bean"</em></h1>
-        <p>blackbean-site:$ <span id="commandSelect" data-typed-items="\d global.profile -n 'BlackBean'"></span></p>
-        <p>&nbsp;<i id="commandResult">I'm</i> <span id="commandResultTyping"
-                                                     data-typed-items="a software engineer,Vietnamese"></span></p>
+        <div id="intro-terminal">
+            <p>blackbean-site:$ <span id="commandSelect" data-typed-items="\d help"></span></p>
+            <p>&nbsp;<i id="commandResult">I'm</i> <span id="commandResultTyping"
+                                                       data-typed-items="a software engineer,Vietnamese"></span></p>
+        </div>
         <div class="social-links">
             <a href="https://www.linkedin.com/in/blackbean?locale=vi_VN" class="linkedin"><i
                     class="bx bxl-linkedin"></i></a>
@@ -71,7 +91,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <ul>
-                                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.codingland.com</span>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.blackbean.icu</span>
                                 </li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong>
                                     <span>+84 944 534 128</span></li>
@@ -84,7 +104,7 @@
                                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Science</span>
                                 </li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
-                                    <span>me@codingland.com</span></li>
+                                    <span>me@blackbean.icu</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong>
                                     <span>Available</span></li>
                             </ul>
@@ -185,7 +205,7 @@
                         <ul>
                             <li>Ho Chi Minh city, Viet Nam</li>
                             <li>(+84) 0944534128</li>
-                            <li>me@codingland.com</li>
+                            <li>me@blackbean.icu</li>
                         </ul>
                     </div>
 
@@ -390,7 +410,6 @@
     </section>
 
 </main>
-
 <footer id="footer">
     <div class="container lang-us">
         <h3><em class="tag">Anh Nguyen</em></h3>
@@ -402,10 +421,10 @@
         </div>
     </div>
 </footer>
-
 <div id="preloader"></div>
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
         class="bi bi-arrow-up-short"></i></a>
+</div>
 <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
 <script src="assets/vendor/aos/aos.js"></script>
 <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -416,6 +435,7 @@
 <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
 <script src="assets/vendor/php-email-form/validate.js"></script>
 <script src="assets/js/main.js"></script>
+<script src="assets/js/terminal.js"></script>
 
 </body>
 
